<resources>
    <string name="app_name">Tutorial04</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="select_all">select all</string>
    <string name="add_button">add</string>
    <string name="signIn_button">sign in</string>
    <string name="delete_button">delete</string>
    <string name="update_button">update</string>
</resources>
